# zk_structure

./: BBS Circom PoC.py  LICENSE  README.md  bbs.py  bbs.txt  phi_commit.circom  phi_commit.r1cs  phi_input.json  proof.json  public.json  pyproject.toml  verification_key.json
docs/: POCT_BLOCK_PRODUCER_SPEC.md  POCT_COLD_START.md  POCT_DAG_SPEC.md  POCT_DEPLOYMENT_STATUS.md  POCT_FINAL_CONSENSUS_CONVERGENCE_SPEC.md  POCT_IDENTITY_ACTION_SPEC.md  POCT_IDENTITY_CONTROL_SPEC.md  POCT_IDENTITY_STATE_OBJECT_SPEC.md  POCT_IMPLEMENTATION_SUMMARY.md  POCT_L0_L1_SPEC.md  POCT_L1_BATCH_SPEC.md  POCT_L1_EXECUTION_SPEC.md  POCT_L1_INTERFACE_SPEC.md  POCT_NODE_SPEC.md  POCT_PERSISTENCE_SPEC.md  POCT_PRODUCER_GATE_SPEC.md  POCT_PRODUCER_SELECTION_SPEC.md  POCT_REPO_GOVERNANCE.md  POCT_REWARD_SPEC.md  POCT_SECURITY_AUDIT_SPEC.md  POCT_STATE_TRANSITION_SPEC.md  POCT_STRESS_TEST_SPEC.md  POCT_SYNC_CONVERGENCE_SPEC.md  POCT_TOKENOMICS_SPEC.md  POCT_TRAJECTORY_SPEC.md  POCT_V0_2_IMPLEMENTATION_PLAN.md  POCT_ZK_BACKEND_SPEC.md
docs/wallet/: index.html
structural_crypto/: __init__.py
structural_crypto/app/: cli.py  demo.py  wallet_web.py
structural_crypto/consensus/: __init__.py  cold_start.py
structural_crypto/crypto/: __init__.py  policy.py  signature.py  structure.py
structural_crypto/identity/: __init__.py  actions.py  models.py  state.py  transition.py
structural_crypto/l1/: __init__.py  executor.py
structural_crypto/ledger/: __init__.py  blockchain.py  models.py
tests/: test_blockchain.py  test_cold_start.py  test_identity.py  test_node_l1_zk.py
(+9 files in other folders)
