[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "structural-cryptography"
version = "0.1.0"
description = "A minimal policy-enforced UTXO blockchain evolving from Structural Cryptography."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "papasop" }
]

[project.scripts]
structural-chain = "structural_crypto.app.cli:main"

[tool.setuptools]
include-package-data = true

